--- a/hackathon.html
+++ b/hackathon.html
@@ -2,32 +2,73 @@
 <html>
 <head>
 	<title>Hackathon</title>
-	<link rel="stylesheet" type="text/css" href="./hackathon.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="./css/hackathon.css">
+	<link href="https://fonts.googleapis.com/css?family=Lemonada" rel="stylesheet">
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 <body>
 	<div class="container">
-		<div class="tool-bar row">
-		</div>
 		<div class="main row">
-		</div>
-		<div class="how-it-works row">
+			<h1>App Name</h1>
+			<h3>Tagline</h3>
+			<button id="start-search">Find Your Match</button>
 		</div>
 		<div class="sliding-reviews row">
 		</div>
+		<div class="how-it-works row">
+			<div class="col-md-4 one">
+				<h2>1</h2>
+				<h4 class="steps"></h4>
+			</div>
+			<div class="col-md-4 two">
+				<h2>2</h2>
+				<h4 class="steps"></h4>
+			</div>	
+			<div class="col-md-4 three">
+				<h2>3</h2>
+				<h4 class="steps"></h4>
+			</div>	
+		</div>
+
 		<div class="guarantees row">
+			<div class="col-md-6">
+			</div>
+			<div class="col-md-6">
+			</div>
 		</div>
 		<div class="tips row">
+			<div class="col-md-6">
+			</div>
+			<div class="col-md-6">
+			</div>
 		</div>
 		<div class="contact-us row">
+			<div class="col-md-6 pic">
+			</div>
+			<div class="col-md-6 contact">
+				<br><br>
+				<h2>Contact Us</h2><br>
+				<span class="contact-details">Phone Number: <br>+972 50-5860918</span><br><br>
+				<span class="contact-details">Email Address: <br>sylviesimons@gmail.com</span><br><br>
+				<span class="contact-details">Address: <br>16 Herzl St.,<br> Tel Aviv,<br> 6688402</span>
+
+			</div>
 		</div>
 		<div class="footer row">
+			<div class="col-md-3">
+			</div>
+			<div class="col-md-3">
+			</div>
+			<div class="col-md-3">
+			</div>
+			<div class="col-md-3">
+			</div>		
 		</div>
 	</div>
 
-	<script src="./hackathon.js"></script>
+	<script src="./javascript/hackathon.js"></script>
 </body>
 </html>
