--- a/hackathon.html
+++ b/hackathon.html
@@ -13,8 +13,11 @@
 	<div class="container">
 		<div class="main row">
 			<h1>App Name</h1>
-			<h3>Tagline</h3>
-			<button id="start-search">Find Your Match</button>
+			<h3>Tagline</h3><br><br><br><br><br><br>
+			<div class="text-center">
+				<button id="owner">I am looking for a host</button><br><br><br><br><br>
+				<button id="host">I want to become a host</button>
+			</div>
 		</div>
 		<div class="sliding-reviews row">
 		</div>
