--- a/owner.html
+++ b/owner.html
@@ -9,6 +9,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+	<div class="container">
+		<form method="get">
+		</form>
+	</div>
 	<script src="./javascript/owner.js"></script>
 </body>
 </html>
