--- a/hackathon.html
+++ b/hackathon.html
@@ -18,8 +18,8 @@
 			<h1>Gurbnb</h1>
 			<h3>The best for your best.</h3><br><br><br><br><br><br>
 			<div class="text-center">
-				<a href="LINK TO RIFAT'S"><button id="owner">I am looking for a sitter</button></a><br><br><br><br><br>
-				<a href="LINK TO LIOR'S"><button id="host">I want to become a sitter</button></a>
+				<a href="./owner.html"><button id="owner">I am looking for a sitter</button></a><br><br><br><br><br>
+				<a href="./sitter-form.html"><button id="host">I want to become a sitter</button></a>
 			</div>
 		</div>
 		<div class="sliding-reviews row">
