--- a/owner.html
+++ b/owner.html
@@ -15,14 +15,12 @@
 <div class="container">
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		<ul class="nav navbar-nav navbar-left">
-		<li><img class="logo" src="images/puppy.png"/></li>
+		<li><img class="logo" src="images/logo.png"/></li>
 		</ul>
 	      <ul style="margin-right: 30px;" class="nav navbar-nav navbar-right">
-	        <li><a href="#">Link</a></li>
-	        <li style="margin-left:26px"><a href="#">Link</a></li>
-	        <li style="margin-left:26px"><a href="#">Link</a></li>
-	        <li style="margin-left:26px"><a href="#">Link</a></li>
-	        <li style="margin-left:26px"><a href="#">Link</a></li>
+	        <li style="margin-left:26px"><a href="./hackathon.html">Home Page</a></li>
+	        <li style="margin-left:26px"><a class="active" href="./owner.html">Dog Owners</a></li>
+	        <li style="margin-left:26px"><a href="./sitter-form">Register as a Sitter</a></li>
 	      </ul>
 	</div>
 </div>
