--- a/hackathon.html
+++ b/hackathon.html
@@ -66,25 +66,20 @@
 		</div>
 
 		<div class="guarantees row">
-			<div class="col-md-8">
+			<div class="col-md-6 section">
 				<br>
-				<h3>24/7 Customer Support</h3>
+				<h3 class="guarantee-head">24/7 Customer Support</h3>
 				<span class="guarantee">We are here for you via phone and email whenever you need us.</span><br>
-				<h3>Premium Pet Insurance</h3>
+				<h3 class="guarantee-head">Premium Pet Insurance</h3>
 				<span class="guarantee">Every reservation made through our site is covered.</span><br>
-				<h3>Daily Photo Updates</h3>
+				<h3 class="guarantee-head">Daily Photo Updates</h3>
 				<span class="guarantee">You can see how much fun your pet is having while you're away.</span>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3 logo-container">
 				<img id="logo-image" src="./images/cropped-logo.gif" alt="logo">
 			</div>
 		</div>
-		<div class="tips row">
-			<div class="col-md-6 suggestions">
-			</div>
-			<div class="col-md-6 pic">
-			</div>
-		</div>
+	
 		<div class="contact-us row">
 			<div class="col-md-6 pic">
 			</div>
