--- a/hackathon.html
+++ b/hackathon.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<link rel="icon" href="./images/logo.png" sizes="16x16" type="image/png">
 	<title>Hackathon</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
