--- a/owner.html
+++ b/owner.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<link rel="icon" href="./images/logo.png" sizes="16x16" type="image/png">
 	<title>Find your match</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/owner.css">
@@ -20,7 +21,7 @@
 	      <ul style="margin-right: 30px;" class="nav navbar-nav navbar-right">
 	        <li style="margin-left:26px"><a href="./hackathon.html">Home Page</a></li>
 	        <li style="margin-left:26px"><a class="active" href="./owner.html">Dog Owners</a></li>
-	        <li style="margin-left:26px"><a href="./sitter-form">Register as a Sitter</a></li>
+	        <li style="margin-left:26px"><a href="./sitter-form.html">Register as a Sitter</a></li>
 	      </ul>
 	</div>
 </div>
