--- a/sitter-form.html
+++ b/sitter-form.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link rel="icon" href="./images/logo.png" sizes="16x16" type="image/png">
 <title>Gur-Sitter Application Form</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
