--- a/hackathon.html
+++ b/hackathon.html
@@ -34,19 +34,20 @@
 
 			  <!-- Wrapper for slides -->
 			  	<div class="carousel-inner" role="listbox">
-				    	<div class="item active">
+				    <div class="item active">
 				      	<img src="./images/dog-on-woman.jpg" alt="photo">
 				      	<div class="carousel-caption">
-				        ...
+					    	<span>"I was apprehensive at first as I did not want to leave my puppy with a stranger, but my dog sitter was lovely and put my mind at ease very quickly!"</span><br>
+					    	<span>Hadar Cohen</span>
 				      	</div>
-				    	</div>
+				    </div>
 				    <div class="item">
 				      <img src="./images/woman-dog-field.jpg" alt="photo">
 				      <div class="carousel-caption">
-				        ...
+					    	<span>"Gurbnb saved me. I planned a last minute holiday and none of my friends or family could look after my dog. The website was easy to use and it connected me with a great sitter for my dog."</span><br>
+					     	<span>Yaron Bahar</span>
 				      </div>
 				   	</div>
-				    ...
 			  	</div>
 			</div>
 		<div class="how-it-works row">
