--- a/hackathon.html
+++ b/hackathon.html
@@ -23,32 +23,7 @@
 				<a href="./sitter-form.html"><button id="host">I want to become a sitter</button></a>
 			</div>
 		</div>
-		<div class="sliding-reviews row">
-			<div id="review-carousel" class="carousel slide" data-pause="carousel">
-			  <!-- Indicators -->
-			  		<ol class="carousel-indicators">
-			    		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			    		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			  		</ol>
-
-			  <!-- Wrapper for slides -->
-			  	<div class="carousel-inner" role="listbox">
-				    	<div class="item active">
-				      	<img src="./images/dog-on-woman.jpg" alt="photo">
-				      	<div class="carousel-caption">
-				        ...
-				      	</div>
-				    	</div>
-				    <div class="item">
-				      <img src="./images/woman-dog-field.jpg" alt="photo">
-				      <div class="carousel-caption">
-				        ...
-				      </div>
-				   	</div>
-				    ...
-			  	</div>
-			</div>
+		
 		<div class="how-it-works row">
 			<div class="col-md-4 one">
 				<div class="col-md-7">
@@ -65,7 +40,39 @@
 				<h4 class="steps">Make arrangements for your pet's stay.</h4>
 			</div>	
 		</div>
+			<div class="sliding-reviews row">
+				<div id="review-carousel" class="carousel slide" data-ride="carousel">
+				  <!-- Indicators -->
+				  		<ol class="carousel-indicators">
+				    		<li data-target="#review-carousel" data-slide-to="0" class="active"></li>
+				    		<li data-target="#review-carousel" data-slide-to="1"></li>
+				    		<li data-target="#review-carousel" data-slide-to="2"></li>
+				  		</ol>
 
+				  <!-- Wrapper for slides -->
+				  	<div class="carousel-inner" role="listbox">
+					    	<div class="item active">
+					      	<img src="./images/dog-on-woman.jpg" alt="photo">
+					      	<div class="carousel-caption">
+					        ...
+					      	</div>
+					    	</div>
+					    <div class="item">
+					      <img src="./images/woman-dog-field.jpg" alt="photo">
+					      <div class="carousel-caption">
+					        ...
+					      </div>
+					   	</div>
+				  	</div>
+				  	  <a class="left carousel-control" href="#review-carousel" data-slide="prev">
+					    <span class="glyphicon glyphicon-chevron-left"></span>
+					    <span class="sr-only">Previous</span>
+					  </a>
+					  <a class="right carousel-control" href="#review-carousel" data-slide="next">
+					    <span class="glyphicon glyphicon-chevron-right"></span>
+					    <span class="sr-only">Next</span>
+					  </a>
+				</div>
 		<div class="guarantees row">
 			<div class="col-md-6 section">
 				<br>
@@ -76,7 +83,7 @@
 				<h3 class="guarantee-head">Daily Photo Updates</h3>
 				<span class="guarantee">You can see how much fun your pet is having while you're away.</span>
 			</div>
-			<div class="col-md-3 logo-container">
+			<div class="col-md-6 logo-container">
 				<img id="logo-image" src="./images/cropped-logo.gif" alt="logo">
 			</div>
 		</div>
@@ -93,8 +100,9 @@
 
 			</div>
 		</div>
-		<div class="container footer row">	
-			<div class="footer-1 footer">
+		<div class="container footer row col-md-12">
+		<div class="col-md-1"></div>	
+			<div class="footer-1 footer col-md-5">
 				<span class="titles">Help</span>
 					<ul class="firstsectionlist">
 						<li class="item">Support</li>
@@ -107,8 +115,8 @@
 						<li class="item">Press</li>
 					</ul>
 			</div>
-			
-			<div class="footer-2 footer">
+			<div class="col-md-1"></div>
+			<div class="footer-2 footer col-md-5">
 				<span class="titles">Resources</span>
 					<ul class="firstsectionlist">
 						<li class="item">Become a Sitter</li>
@@ -121,32 +129,9 @@
 					</ul>
 			</div>
 
-			<div class="footer-4 footer">
-				<span class="titles">Guarantees</span>
-					<ul class="firstsectionlist">
-						<li class="item">Manage Your Apple ID</li>
-						<li class="item">Apple Store Account</li>
-						<li class="item">iCloud.com</li>
-					</ul>
-				<span class="titles">Gurbnb Values</span>
-					<ul class="firstsectionlist">
-						<li class="item">Accessibility</li>
-						<li class="item">Education</li>
-						<li class="item">Environment</li>
-						<li class="item">Inclusion and Diversity</li>
-						<li class="item">Privacy</li>
-						<li class="item">Supplier Responsibility</li>
-					</ul>
-			</div>
-			<div class="footer-5 footer">
-				<span class="titles">About Gurbnb</span>
-					<ul class="firstsectionlist">
-						<li class="item">Newsroom</li>
-						<li class="item">Job Opportunities</li>
-						<li class="item">Investors</li>
-						<li class="item">Contact Gurbnb</li>
-					</ul>
-					<span id="copyrighttext">© Gurbnb. Made with love in Tel Aviv.</span>
+			<div class="footer-5 footer col-md-12">
+				<span style="float: left;" class="titles">About Gurbnb</span>
+					<span style="float: right;" id="copyrighttext">© Gurbnb. Made with love in Tel Aviv.</span>
 			</div>
 		</div>
 		
