--- a/hackathon.html
+++ b/hackathon.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./css/hackathon.css">
+	<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 	<link href="https://fonts.googleapis.com/css?family=Lemonada" rel="stylesheet">
 	<meta charset="UTF-8">
 	
@@ -23,6 +24,23 @@
 				<a href="./sitter-form.html"><button id="host">I want to become a sitter</button></a>
 			</div>
 		</div>
+		<div class="how-it-works row">
+			<div class="col-md-4 one">
+				<div class="col-md-7">
+					<h2>Step 1:</h2>
+					<h4 class="steps">Search for your ideal sitter.</h4>
+				</div>
+			</div>
+			<div class="col-md-4 two">
+				<h2>Step 2:</h2>
+				<h4 class="steps">Contact the sitter/s of your choice.</h4>
+			</div>	
+			<div class="col-md-4 three">
+				<h2>Step 3:</h2>
+				<h4 class="steps">Make arrangements for your pet's stay.</h4>
+			</div>	
+		</div>
+
 		<div class="sliding-reviews row">
 			<div id="review-carousel" class="carousel slide" data-ride="carousel">
 			  <!-- Indicators -->
@@ -53,27 +71,13 @@
 				    <span class="glyphicon glyphicon-chevron-left"></span>
 				    <span class="sr-only">Previous</span>
 				  </a>
-				  <a class="right carousel-control" href="#review-carousel" data-slide="next">
+				<a class="right carousel-control" href="#review-carousel" data-slide="next">
 				    <span class="glyphicon glyphicon-chevron-right"></span>
 				    <span class="sr-only">Next</span>
 				  </a>
 			</div>
-		<div class="how-it-works row">
-			<div class="col-md-4 one">
-				<div class="col-md-7">
-					<h2>1</h2>
-					<h4 class="steps">Search for your ideal sitter.</h4>
-				</div>
-			</div>
-			<div class="col-md-4 two">
-				<h2>2</h2>
-				<h4 class="steps">Contact the sitter/s of your choice.</h4>
-			</div>	
-			<div class="col-md-4 three">
-				<h2>3</h2>
-				<h4 class="steps">Make arrangements for your pet's stay.</h4>
-			</div>	
 		</div>
+
 		<div class="guarantees row">
 			<div class="col-md-6 section">
 				<br>
@@ -101,41 +105,41 @@
 
 			</div>
 		</div>
-		<div class="container footer row col-md-12">
-		<div class="col-md-1"></div>	
-			<div class="footer-1 footer col-md-5">
-				<span class="titles">Help</span>
-					<ul class="firstsectionlist">
-						<li class="item">Support</li>
-						<li class="item">Contact</li>
-					</ul>
-				<span class="titles">About Gurbnb</span>
-					<ul class="firstsectionlist">
-						<li class="item">About Us</li>
-						<li class="item">Joining Forces</li>
-						<li class="item">Press</li>
-					</ul>
-			</div>
-			<div class="col-md-1"></div>
-			<div class="footer-2 footer col-md-5">
-				<span class="titles">Resources</span>
-					<ul class="firstsectionlist">
-						<li class="item">Become a Sitter</li>
-						<li class="item">Dog Sitting Guide</li>
-						<li class="item">Blog</li>							
-					</ul>
-				<span class="titles">Our Service</span>
-					<ul class="firstsectionlist">
-						<li class="item">Dog Boarding</li>
-					</ul>
-			</div>
 
-			<div class="footer-5 footer col-md-12">
-				<span style="float: left;" class="titles">About Gurbnb</span>
-					<span style="float: right;" id="copyrighttext">© Gurbnb. Made with love in Tel Aviv.</span>
+			<div class="container footer row col-md-12">
+				<div class="col-md-1"></div>	
+				<div class="footer-1 footer col-md-5">
+					<span class="titles">Help</span>
+						<ul class="firstsectionlist">
+							<li class="item">Support</li>
+							<li class="item">Contact</li>
+						</ul>
+					<span class="titles">About Gurbnb</span>
+						<ul class="firstsectionlist">
+							<li class="item">About Us</li>
+							<li class="item">Joining Forces</li>
+							<li class="item">Press</li>
+						</ul>
+				</div>
+				<div class="col-md-1"></div>
+				<div class="footer-2 footer col-md-5">
+					<span class="titles">Resources</span>
+						<ul class="firstsectionlist">
+							<li class="item">Become a Sitter</li>
+							<li class="item">Dog Sitting Guide</li>
+							<li class="item">Blog</li>							
+						</ul>
+					<span class="titles">Our Service</span>
+						<ul class="firstsectionlist">
+							<li class="item">Dog Boarding</li>
+						</ul>
+				</div>
+
+				<div class="footer-5 footer col-md-12">
+					<span style="float: left;" class="titles">About Gurbnb</span>
+						<span style="float: right;" id="copyrighttext">© Gurbnb. Made with love in Tel Aviv.</span>
+				</div>
 			</div>
-		</div>
-		
 	</div>
 
 	<script src="./javascript/hackathon.js"></script>
