--- a/owner.html
+++ b/owner.html
@@ -29,7 +29,7 @@
 <div class="container filterItems">
 	<div class="col-sm-4 col-md-4">
 	  <div class="dropdown">
-		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled>
 		    Filter 1
 		    <span class="caret"></span>
 		  </button>
@@ -44,7 +44,7 @@
 	</div>
 	<div class="col-sm-4 col-md-4">
 		<div class="dropdown">
-		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled>
 		    Filter 2
 		    <span class="caret"></span>
 		  </button>
@@ -59,7 +59,7 @@
 	</div>
 	<div class="col-sm-4 col-md-4">
 		<div class="dropdown">
-		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" disabled>
 		    Filter 3
 		    <span class="caret"></span>
 		  </button>
