--- a/sitter-form.html
+++ b/sitter-form.html
@@ -229,8 +229,15 @@
 		</form>
 	</div>	
 </div>
-<div class="pendingRequest">
-	
+<div style="display: none" class="pendingRequest">
+	<div style="text-align: center" class="container text-center">
+		<h4 class="thankyou">Thank you for your submission!</h4>
+		<h5 class="thankyouSub">
+			Your application will be reviewed by our professional team and you will hear from us within 72 hours.<br/>
+			You will be directed automatically, feel free the whoof around!<br/>
+			<img style="width: 300px" src="http://orig02.deviantart.net/95a4/f/2010/076/b/7/haseo_wolf_run_final_by_atrieisan.gif"/>
+		</h5>
+	</div>
 </div>
 <script src="./javascript/sitter.js"></script>
 </body>
