--- a/hackathon.html
+++ b/hackathon.html
@@ -20,22 +20,22 @@
 			<h1>Gurbnb</h1>
 			<h3>The best for your best.</h3><br><br><br><br><br><br>
 			<div class="text-center">
-				<a href="./owner.html"><button id="owner">I am looking for a sitter</button></a><br><br><br><br><br>
-				<a href="./sitter-form.html"><button id="host">I want to become a sitter</button></a>
+				<a href="./owner.html"><button class="homepage-buttons" id="owner">I am looking for a sitter</button></a><br><br><br><br><br>
+				<a href="./sitter-form.html"><button class="homepage-buttons" id="host">I want to become a sitter</button></a>
 			</div>
 		</div>
 		<div class="how-it-works row">
 			<div class="col-md-4 one">
-				<div class="col-md-7">
+				<div class="col-md-7 steps-text">
 					<h2>Step 1:</h2>
 					<h4 class="steps">Search for your ideal sitter.</h4>
 				</div>
 			</div>
-			<div class="col-md-4 two">
+			<div class="col-md-4 two steps-text">
 				<h2>Step 2:</h2>
 				<h4 class="steps">Contact the sitter/s of your choice.</h4>
 			</div>	
-			<div class="col-md-4 three">
+			<div class="col-md-4 three steps-text">
 				<h2>Step 3:</h2>
 				<h4 class="steps">Make arrangements for your pet's stay.</h4>
 			</div>	
